Fix broken unit tests
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>